--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@
 .navbar ul li{
     list-style: none;
     display: inline-block;
-    margin; 0 20px;
+    margin: 0 20px;
     position: relative;
 }
 
